--- a/electron/package.json
+++ b/electron/package.json
@@ -24,6 +24,8 @@
     "electron-builder": "^22.8.1"
   },
   "dependencies": {
+    "@types/crypto-js": "^3.1.47",
+    "crypto-js": "^4.0.0",
     "rxjs": "^6.6.3"
   }
 }
